--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 							<a class="nav-link" href="#">About me</a>
 						</li>
 						<li class="nav-item">
+							<a class="nav-link" href="#">Sustane me</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="#">Contact with me</a>
 						</li>
 						<li class="nav-item">
