--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<div class="icon-holder">
 								<img src="resources/img/icons/intellectual.png" class="icon">
 							</div>
-							<h4 class="heading">Trusted by Scholars</h4>
+							<h4 class="heading">rusted by Scholars</h4>
 							<p class="description">Studies have proven acupressure more effective than physiotherapy.</p>
 						</div>
 					</div>
